--- a/GlsunView/Views/OLPCard/RouteView.cshtml
+++ b/GlsunView/Views/OLPCard/RouteView.cshtml
@@ -146,7 +146,7 @@
                 <th>当前值</th>
                 <th>告警阈值</th>
                 <th>切换阈值</th>
-                <th>校准阈值</th>
+                @*<th>校准阈值</th>*@
             </tr>
         </thead>
         <tbody>
@@ -161,7 +161,7 @@
                     <input id="R1_Switching_Power" name="R1_Switching_Power" value="-35.0">
                 </td>
                 <td class="value1">
-                    <input id="R1_Calibration_Power" name="R1_Calibration_Power" value="6">
+                    @*<input id="R1_Calibration_Power" name="R1_Calibration_Power" value="6">*@
                 </td>
             </tr>
             <tr>
@@ -175,7 +175,7 @@
                     <input id="R2_Switching_Power" name="R2_Switching_Power" value="-35.0">
                 </td>
                 <td class="value1">
-                    <input id="R2_Calibration_Power" name="R2_Calibration_Power" value="10">
+                    @*<input id="R2_Calibration_Power" name="R2_Calibration_Power" value="10">*@
                 </td>
             </tr>
             <tr>
