--- a/GlsunView/Content/css/leftMenu.css
+++ b/GlsunView/Content/css/leftMenu.css
@@ -4,11 +4,12 @@
     border-bottom: 0;
     width:200px;
     height:100%;
-    font-size:1em;
+    font-size:15px;
     overflow-x:hidden;
-    overflow-y: overlay;
+    overflow-y:scroll;
     position:relative;
     left:-1px;
+    background-color: #ededed;
 }
 .leftMenu::-webkit-scrollbar {
     display: none;
@@ -19,12 +20,21 @@
     position:relative;
     top:1px;
     margin-left:5px;
+    margin-right: 10px;
 }
 .leftMenu ul li{
     border-top: 1px solid #ccc;
     background-color: #eaeaea;
     display:block;
     position:relative;
+    background: linear-gradient(#fdfdfd, #ededed);
+}
+.leftMenu>ul>li.expanded>ul>li:first-child{
+    border-top: 1px solid #ccc;
+}
+/*¶þ¼¶²Ëµ¥*/
+.leftMenu>ul>li ul>li{
+    border-top: 1px dashed #ccc;
 }
 .leftMenu>ul>li>a{
     padding-left: 3px;
@@ -37,11 +47,12 @@
     content:'';
     width:3px;
     max-width: 3px;
-    height: 1.8em;
+    height: 35px;
     background-color: #457;
     position: absolute;
     left: 0;
-    top: -1px;
+    top: 0px;
+    transition: opacity .4s ease-in;
 }
 
 .leftMenu ul li.selected{
@@ -56,13 +67,14 @@
 .leftMenu ul li ul li{
     font-size: 0.9em;
     background-color: #fff;
+    background: linear-gradient(#fff, #fff);
 }
 .leftMenu ul li a{
     cursor: pointer;
     color: black;
     text-decoration: none;
     display: block;
-    line-height: 29px;
+    line-height: 35px;
     -webkit-transition:background-color .4s ease-in;
 	-moz-transition:background-color .4s ease-in;
 	transition:background-color .4s ease-in;
@@ -82,7 +94,7 @@
 }*/
 .leftMenu ul li ul li a{
     padding-left: 25px;
-    line-height: 1.6em;
+    line-height: 30px;
 }
 .leftMenu ul li ul li ul li a{
     padding-left: 45px;
@@ -97,10 +109,12 @@
 .right-tag{
     font-size: 0.8em;
     float:right;
-    height: 1.6em;
-    line-height: 1.6em;
-    position:relative;
-    top:0.4em;
+    height: 35px;
+    line-height: 35px;
+}
+.leftMenu>ul>li>ul>li a .right-tag{
+    height: 30px;
+    line-height: 30px;
 }
 .right-tag::before{
     content: "\f0fe";
