--- a/GlsunView/Content/css/tab.css
+++ b/GlsunView/Content/css/tab.css
@@ -8,7 +8,7 @@
     border-left:0;
     background-color: #eaeaea;
     border-bottom:0;
-    height:30px;
+    height:36px;
     overflow: hidden;
     display: block;
     position: relative;
@@ -22,7 +22,7 @@
 .tab-header ul{
     overflow: hidden;
     position: absolute;
-    height: 30px;
+    height: 36px;
     left:20px;
     right:20px;
 }
@@ -31,24 +31,27 @@
     white-space: nowrap;
     list-style: none;
     width:auto;
-    height:30px;
-    padding-left: 5px;
-    line-height: 30px;
+    height:35px;
+    padding-left: 10px;
+    line-height: 36px;
     position: absolute;
-    top:0px;
-    z-index: 1;
+    top:1px;
+    z-index: 0;
     border-left: 1px solid #ccc;
+     background: linear-gradient(to right,#fdfdfd,#ededed); /* 标准的语法 */
 }
 .tab-header ul li.fixed{
     padding-right: 5px;
 }
 .tab-header ul .selected{
     background-color:#fff;
-    border-left:1px solid #ccc;
-    border-right:1px solid #ccc;
+    border:1px solid #445577;
     border-bottom:1px solid #fff;
-    border-top: 0;
-    
+    top:0;
+    z-index: 2;
+    background: linear-gradient(to right, #fff, #fff); /* 标准的语法 */
+    border-top-left-radius:3px;
+    border-top-right-radius: 3px;
 }
 .tab-header ul .selected a span{
     font-weight: bold;
@@ -69,7 +72,9 @@
     z-index:0;
 }
 .tab-header ul .selected:hover{
-    z-index: 1;
+    z-index: 2;
+    border-left:1px solid #445577;
+    border-right:1px solid #445577;
 }
 .tab-header a i.close{
     font-size: 0.8em;
@@ -91,11 +96,12 @@
 }
 .tab-content{
     border:1px solid #ccc;
+    border-top-color: #445577;
     border-left: 0;
     border-bottom: 0;
     padding: 2px;
     position:absolute;
-    top:30px;
+    top:36px;
     left:0px;
     bottom:0px;
     right:0px;
@@ -155,11 +161,11 @@
     position: absolute;
     display: none;
     background-color: #fff;
-    z-index: 2;
+    z-index: 3;
 }
 .tab-contextmenu li{
-    height: 25px;
-    line-height: 25px;
+    height: 35px;
+    line-height: 35px;
     padding: 0px 10px 0 8px;
     cursor: pointer;
 }
