--- a/GlsunView/Views/Home/Index.cshtml
+++ b/GlsunView/Views/Home/Index.cshtml
@@ -37,8 +37,9 @@
                     <a id="status" href="#">
                         <i class="fa fa-bar-chart fa-fw"></i>
                     </a>*@
-                    <a>
-                        Glsun View 网管平台
+                    <a class="website-name">
+                        <i class="fa fa-cubes fa-fw"></i>
+                        <span>Glsun View 网管平台</span>
                     </a>
                 </div>
                 <div class="nav-bar-middle">
