--- a/GlsunView/Views/MachineFrame/Create.cshtml
+++ b/GlsunView/Views/MachineFrame/Create.cshtml
@@ -29,7 +29,7 @@
     @Html.HiddenFor(m => m.ID)
     @Html.HiddenFor(m => m.MSID)
     <div class="form-group">
-        <label class="col-xs-2 control-label">机框名</label>
+        <label class="col-xs-2 control-label">设备名</label>
         <div class="col-xs-4">
             @Html.TextBoxFor(m => m.MFName, new { @class = "form-control" })
         </div>
