--- a/GlsunView/Views/MachineFrame/List.cshtml
+++ b/GlsunView/Views/MachineFrame/List.cshtml
@@ -26,7 +26,7 @@
                 <thead>
                     <tr>
                         <th>行号</th>
-                        <th>机框名</th>
+                        <th>设备名</th>
                         <th>IP地址</th>
                         <th>通信端口</th>
                         <th>主控类型</th>
