添加Lisence验证机制

--- a/GlsunView/Views/Account/Login.cshtml
+++ b/GlsunView/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@
 <body>
     <div class="main-box">
         <form id="signinForm" action="~/Account/Login" method="POST">
-            <p class="text-center logo-text">光隆科技网络管理系统</p>
+            <p class="text-center logo-text">OTS3000平台网络管理系统</p>
             <div id="summary" class="text-center login-msg">
                 @if (ViewBag.IsValid != null && ViewBag.IsValid == false)
                 {
