--- a/GlsunView/Views/Home/Index.cshtml
+++ b/GlsunView/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                     </a>*@
                     <a class="website-name">
                         <i class="fa fa-cubes fa-fw"></i>
-                        <span>Glsun View 网管平台</span>
+                        <span>OTS3000平台网络管理系统</span>
                     </a>
                 </div>
                 <div class="nav-bar-middle">
