--- a/GlsunView/Views/OLPCard/RouteView.cshtml
+++ b/GlsunView/Views/OLPCard/RouteView.cshtml
@@ -37,6 +37,9 @@
             background-color: #8dce47;
             border-style: none;
         }
+        .table_up td.value input{
+            text-align:center;
+        }
         .table_up td.separator{
             width: 40px;
         }
